# weather_app

./: .env.sample  Dockerfile  README.md  docker-compose-local.yml  entrypoint.sh  mypy.ini  pyproject.toml
app/: settings.py  urls.py
app/middlewares/: logging_middleware.py  rate_limit.py
common/: get_client_ip.py  pagination.py
tests/: conftest.py
tests/app/middlewares/: conftest.py  test_rate_limit.py
tests/weather/: test_views.py
tests/weather/services/: test_csv_export_service.py  test_weather_service.py
weather/: apps.py  filters.py  health_check.py  health_checks.py  models.py  serializers.py  urls.py  views.py  web_urls.py
weather/migrations/: 0001_initial.py
weather/services/: csv_export_service.py  weather_service.py
weather/static/weather/: style.css
weather/templates/: base.html
weather/templates/weather/: fetch.html  history.html
weather/types/: weather_types.py
